--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,9 @@ nav a {
  position: relative;
 }
 
+nav a:hover{
+  color: #ff9800;
+}
 .container {
  max-width: 1200px;
  margin: 2rem auto;
@@ -35,10 +38,34 @@ nav a {
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  font-size: large;
 }
+
+
 .about {
  text-align: center;
- margin-bottom: 2rem;
+ margin-bottom: 40px;
 }
+
+.profile {
+ display: flex;
+ justify-content: center;
+ gap: 20px;
+ align-items: center;
+ margin-top: 20px;
+}
+
+.profile-picture {
+ width: 150px;
+ height: 150px;
+ border-radius: 50%;
+ border: 4px solid #ccc;
+ object-fit: cover;
+}
+
+.profile-text {
+ text-align: left;
+ max-width: 600px;
+}
+
 
 .section-title{
   text-align: center;
@@ -77,9 +104,10 @@ nav a {
 
 footer {
  text-align: center;
- padding: 1rem;
- background-color: none;
+ padding: 10px 0;
+ background: #333;
  color: white;
+ margin-top: 20px;
 }
 
 .gallery-item {
@@ -101,6 +129,7 @@ footer {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
   color: white;
+  margin: 40px auto;
 }
 .form-header {
   text-align: center;
@@ -160,9 +189,23 @@ footer {
   transition: background 0.3s ease;
 }
 .form-footer button:hover {
-  background: #357ae8;
+  background: #fff;
 }
 
 .contact{
   text-align: center;
+  background: #444;
+  color: white;
+  padding: 20px;
+  margin-top: 40px;
+
+}
+
+#contact a{
+  color: #ff9800;
+  text-decoration: none;
+}
+
+#contact a:hover{
+  text-decoration: underline;
 }
